src/test/ui/did_you_mean/issue-34126.stderr
error[E0502]: cannot borrow `self` as mutable because `*self` is also borrowed as immutable
  --> $DIR/issue-34126.rs:16:23
   |
LL |         self.run(&mut self); //~ ERROR cannot borrow
   |         ----          ^^^^- immutable borrow ends here
   |         |             |
   |         |             mutable borrow occurs here
   |         immutable borrow occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
